--- a/Assets/_04TodoList/Tests/Tests.asmdef
+++ b/Assets/_04TodoList/Tests/Tests.asmdef
@@ -3,7 +3,7 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "_04TodoList"
+        "_04ToDoList"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
