--- a/Assets/_04TodoList/_04TodoList.asmdef
+++ b/Assets/_04TodoList/_04TodoList.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "_04TodoList",
+    "name": "_04ToDoList",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
