--- a/Assets/_04TodoList/Tests/Tests.asmdef
+++ b/Assets/_04TodoList/Tests/Tests.asmdef
@@ -5,7 +5,9 @@
         "UnityEditor.TestRunner",
         "_04ToDoList"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
